Added shopping cart functionalities

--- a/BethanysShop/Views/Shared/_PieCard.cshtml
+++ b/BethanysShop/Views/Shared/_PieCard.cshtml
@@ -10,5 +10,14 @@
             </h3>
             <p>@Model.ShortDescription</p>
         </div>
+        <div class="addToCart">
+            <p class="button">
+                @*this shared view is update to date so PieId is up to date*@
+                <a class="btn btn-primary"
+                   asp-controller="ShoppingCart"
+                   asp-action="AddToShoppingCart"
+                   asp-route-pieId="@Model.PieId">Add to cart</a>
+            </p>
+        </div>
     </div>
 </div>
