--- a/BethanysShop/Views/Shared/_Layout.cshtml
+++ b/BethanysShop/Views/Shared/_Layout.cshtml
@@ -28,6 +28,8 @@
                     @await Component.InvokeAsync("CategoryMenu")
 
                     @await Component.InvokeAsync("ShoppingCartSummary")
+                    
+                    <li><a asp-controller="Contact" asp-action="Index">Contact Us</a></li>
                 </ul>
             </div>
         </div>
