--- a/BethanysShop/Views/Shared/_Layout.cshtml
+++ b/BethanysShop/Views/Shared/_Layout.cshtml
@@ -30,6 +30,7 @@
                     @await Component.InvokeAsync("ShoppingCartSummary")
                     
                     <li><a asp-controller="Contact" asp-action="Index">Contact Us</a></li>
+                    <partial name="_LoginPartial"/>
                 </ul>
             </div>
         </div>
@@ -45,6 +46,7 @@
             @RenderBody()
         </div>
     </div>
+    @RenderSection("Scripts", required: false)
 </div>
 </body>
 </html>
