--- a/BethanysShop/Views/Shared/_Layout.cshtml
+++ b/BethanysShop/Views/Shared/_Layout.cshtml
@@ -8,7 +8,7 @@
     <link href="~/lib/bootstrap/css/bootstrap.min.css" rel="stylesheet" />
     <script src="~/lib/jquery/jquery.js"></script>
     <script src="~/lib/bootstrap/js/bootstrap.min.js"></script>
-    <link href="~/Content/site.css" rel="stylesheet" />
+    <link href="~/content/site.css" rel="stylesheet" />
 </head>
 <body>
     <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
